# Qevent

./: README.md
include/qevent/: qcore.h  qevent.h  qselect.h  qsignal.h  qutility.h
src/: CMakelists.txt  config-internal.h  event.c  memory-internal.h  memory.c  select.c  signal.c  utility-internal.h  utility.c
test/: CMakeLists.txt  io-test-client.c  io-test-server.c  signal-test.c  time-test.c
